Add detailed division per day.

--- a/dag1/02.1-html-text-tags.html
+++ b/dag1/02.1-html-text-tags.html
@@ -8,7 +8,7 @@
   <body>
     <div>
       <!-- Tekst -->
-      <!-- Styling oefening: font-size, color, text-align, etc. -->
+      <!-- Styling oefening: colors, typography -->
       <h1>H1 titel</h1>
       <h2>H2 titel</h2>
       <h3>H3 titel</h3>
