--- a/dag2/08-assignment-3.html
+++ b/dag2/08-assignment-3.html
@@ -6,15 +6,11 @@
     <link href="./styles.css" rel="stylesheet">
   </head>
   <body>
+    <!-- Build a counter -->
     <div>
-      <!-- Media -->
-      <img src="./confetti.jpg" alt="" />
-      <video>
-        <source src="" />
-      </video>
-      <audio>
-        <source src="" />
-      </audio>
+      <button>-</button>
+      <input value="2" />
+      </button>+</button>
     <div>
   </body>
 </html>
