--- a/dag1/01-html-document-structure.html
+++ b/dag1/01-html-document-structure.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <!-- Alles wat hier staat kun je wel zien -->
-    Hier komt alle content van je pagina
+    Mijn naam is Mattijs
   </body>
 </html>
