--- a/dag1/02.1-html-text-tags.html
+++ b/dag1/02.1-html-text-tags.html
@@ -9,25 +9,12 @@
     <div>
       <!-- Tekst -->
       <!-- Styling oefening: colors, typography -->
-      <h1>H1 titel</h1>
-      <h2>H2 titel</h2>
-      <h3>H3 titel</h3>
-      <h4>H4 titel</h4>
-      <h5>H5 titel</h5>
-      <h6>H6 titel</h6>
-      <p>Paragraaf met <strong>bold text</strong> en een <a href="./02.1-text-tags-andere-pagina.html">linkje</a>.</p>
+      <h1>Favoriete games</h1>
       <ul>
-        <li>Lijstje</li>
-        <li>Lijstje</li>
-        <li>Lijstje</li>
-        <li>Lijstje</li>
+        <li><a href="https://www.epicgames.com/fortnite/en-US/home">Fortnite</a></li>
+        <li><a href="https://steamcommunity.com/app/1097150">Fall Guys</a></li>
+        <li><a href="https://www.ea.com/en-gb/games/fifa/fifa-23">FIFA</a></li>
       </ul>
-      <ol>
-        <li>Ander lijstje</li>
-        <li>Ander lijstje</li>
-        <li>Ander lijstje</li>
-        <li>Ander lijstje</li>
-      </ol>
     <div>
   </body>
 </html>
