--- a/dag1/03-media-tags.html
+++ b/dag1/03-media-tags.html
@@ -7,11 +7,10 @@
   </head>
   <body>
     <div>
-      <!-- Media -->
-      <img src="./confetti.jpg" alt="" />
-      <video>
-        <source src="" />
+      <video autoplay muted controls loop>
+        <source src="./tiktok.mp4" />
       </video>
+
       <audio>
         <source src="" />
       </audio>
