--- a/dag1/04-colors.html
+++ b/dag1/04-colors.html
@@ -3,10 +3,20 @@
   <head>
     <title>Dit is de titel van je pagina</title>
 
-    <link href="./base.css" rel="stylesheet">
-    <link href="./01-colors.css" rel="stylesheet">
+    <style>
+      body {
+        background-color: purple;
+      }
+
+      p {
+        color: red;
+        font-style: italic;
+        font-size: 100px;
+        font-family: sans-serif;
+      }
+    </style>
   </head>
   <body>
-    Hier is een stukje tekst
+    <p>Hier is een stukje tekst</p>
   </body>
 </html>
