--- a/dag2/06-interactivity/index.html
+++ b/dag2/06-interactivity/index.html
@@ -4,12 +4,10 @@
     <title>Dit is de titel van je pagina</title>
 
     <link href="./styles.css" rel="stylesheet">
-
   </head>
   <body>
-    <h1>Titel 1</h1>
-    <h2>Titel 2</h2>
-    <h3>Titel 3</h3>
-    <p>Hier is een stukje tekst</p>
+      <button>Klik op mij</button>
+
+      <script src="./script.js"></script>
   </body>
 </html>
