--- a/dag2/07-opdracht-2/index.html
+++ b/dag2/07-opdracht-2/index.html
@@ -6,11 +6,8 @@
     <link href="./styles.css" rel="stylesheet">
   </head>
   <body>
-    <!-- Build a counter -->
-    <div>
-      <button>-</button>
-      <input value="2" />
-      </button>+</button>
-    <div>
+    <button>Let's go!</button>
+
+    <script src="./script.js"></script>
   </body>
 </html>
