--- a/dag2/06-interactivity/index.html
+++ b/dag2/06-interactivity/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dit is de titel van je pagina</title>
+    <title>Interactivity | Codeo Dag 2</title>
 
     <link href="./styles.css" rel="stylesheet">
   </head>
   <body>
-      <button>Klik op mij</button>
+      <div class="box"></div>
 
       <script src="./script.js"></script>
   </body>
