--- a/dag2/07-opdracht-2/index.html
+++ b/dag2/07-opdracht-2/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dit is de titel van je pagina</title>
+    <title>Opdracht 2 | Codeo Dag 2</title>
 
     <link href="./styles.css" rel="stylesheet">
   </head>
