--- a/dag3/02-formulieren/index.html
+++ b/dag3/02-formulieren/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dit is de titel van je pagina</title>
-
-    <link href="./styles.css" rel="stylesheet">
+    <title>Formulieren | Codeo Dag 3</title>
   </head>
   <body>
     <div>
@@ -44,6 +42,6 @@
 
         <button type="submit">Klik op mij</button>
       </form>
-    <div>
+    </div>
   </body>
 </html>
