--- a/eindopdracht/liedjes.html
+++ b/eindopdracht/liedjes.html
@@ -6,8 +6,6 @@
     <link href="style.css" rel="stylesheet"></link>
   </head>
   <body>
-    <a href="./liedjes.html">Liedjes</a>
-    <a href="./fotos.html">Foto's</a>
-    <a href="./hero.html">Hero</a>
+    <a href="./index.html">Terug</a>
   </body>
 </html>
