--- a/dag3/02-formulieren/index.html
+++ b/dag3/02-formulieren/index.html
@@ -2,10 +2,24 @@
 <html>
   <head>
     <title>Formulieren | Codeo Dag 3</title>
+
+    <link href="./styles.css" rel="stylesheet">
   </head>
   <body>
     <div>
+      <form>
+        <label for="foto">Upload je foto</label>
+        <label>
+          <input name="foto" value="ja" type="radio">
+          Ja
+        </label>
+        <label>
+          <input name="foto" value="nee" type="radio">
+          Nee
+        </label>
+      </form>
       <!-- Form -->
+      <!--
       <form>
         <div>
           <label>Naam</label>
@@ -19,12 +33,6 @@
 
         <div>
           <label>Selecteer</label>
-          <select>
-            <option value="option-1" selected>Optie 1</option>
-            <option value="option-2">Optie 2</option>
-            <option value="option-3">Optie 3</option>
-            <option value="option-4">Optie 4</option>
-          </select>
         </div>
 
         <div>
@@ -42,6 +50,7 @@
 
         <button type="submit">Klik op mij</button>
       </form>
+-->
     </div>
   </body>
 </html>
