--- a/dag3/03-rekenmachine/index.html
+++ b/dag3/03-rekenmachine/index.html
@@ -7,9 +7,14 @@
   </head>
   <body>
     <!-- Voeg hieronder je HTML toe -->
+    <input type="number" class="cijferLinks">
+    x
+    <input type="number" class="cijferRechts">
+    =
+    <span>0</span>
 
+    <button>Bereken het!</button>
 
-    <!-- __________________________ -->
     <script src="./script.js" type="module"></script>
   </body>
 </html>
