Eindopdracht + Foto uploader.

--- a/eindopdracht/fotos.html
+++ b/eindopdracht/fotos.html
@@ -8,6 +8,8 @@
   <body>
     <a href="./index.html">Terug</a>
 
+    <div class="foto-container"></div>
+
     <script src="./main.js" type="module"></script>
   </body>
 </html>
