--- a/eindopdracht/liedjes.html
+++ b/eindopdracht/liedjes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Home | Eindopdracht</title>
+    <title>Liedjes | Eindopdracht</title>
 
     <link href="style.css" rel="stylesheet"></link>
   </head>
